# codenameBenchmark

./: .gitignore  llmPipepline1st.ipynb  main.py  pyproject.toml  requirements.txt
analysis/: accumulated_results.csv  accumulated_results_with_metadata.csv  analysis.ipynb
benchmark/: benchmark.py  game_config.py  game_runner.py  game_setup.py  wordlistDE.txt
llms/: llm.py
results/: resultsTest_0302190639_qwen2514b_qwen2514b.json  resultsTest_0302192829_0_qwen2514b_qwen2514b.json  resultsTest_0302193329_0_qwen2514b_qwen2514b.json  resultsTest_0302202203_0_llama3170b_llama3170b.json  resultsTest_0302223908_0_qwen2514b_qwen2514b.json  resultsTest_0302231706_1_qwen2514b_qwen2514b.json  resultsTest_0302_1849_qwen2514b_qwen2514b.json  resultsTest_0303164004_0_deepseek-r132b_deepseek-r132b.json  resultsTest_0304095326_0_llama3170b_llama3170b.json  resultsTest_0305111436_0_llama3170b_llama3170b.json  resultsTest_0305111436_1_llama3170b_llama3170b.json  resultsTest_20260301_152631.json  resultsTest_20260301_185544.json
src/: gameSetup.json  main.py
src/benchmark/: benchmark.py  game_config.py  game_runner.py  test.py
src/ccl_benchmark/: __init__.py  main.py
src/ccl_benchmark.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/llms/: llm.py
src/results/: resultsTest_03021854_qwen2514b_qwen2514b.json  resultsTest_default_GLM-47-UD-Q4_K_XLgguf_GLM-47-UD-Q4_K_XLgguf.json  resultsTest_default_Unknown_Unknown.json
src/ustp_ccl_benchmark/: __init__.py  board.py  config_dict.py  exceptions.py  (+7 more)
src/ustp_ccl_benchmark.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+22 files in other folders)
