[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-escape-room"
version = "0.1.0"
description = "A custom game-based QA benchmark for LLM evaluation."
authors = [
    {name = "University Lab Researchers", email = "research@university.edu"}
]
readme = "README.md"
requires-python = ">=3.9"


dependencies = []

[tool.setuptools.packages.find]
where = ["src"]