[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ustp_ccl_benchmark"
version = "0.1.0"
description = "A custom game-based QA benchmark for LLM evaluation."
authors = [
    {name = "Julian Pecho", email = "ds231009@ustp-students.at"}
]
readme = "README.md"
requires-python = ">=3.9"


dependencies = [
    "colorama==0.4.6"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt"]